<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.cxmud.MainActivity">

        <TextView
            android:id="@+id/lbl_name"
            style="@style/headerTextStyle"
            android:text="@string/lbl_name" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="8dp"
            android:hint="@string/edit_name" />

        <TextView
            style="@style/headerTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/lbl_questionOne" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_boonen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/questionOne_Boonen"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_vanaert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/questionOne_VanAert"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_pauwels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/questionOne_Pauwels"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_nys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/questionOne_Nys"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            style="@style/headerTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/lbl_questionTwo" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_hyde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/questionTwo_Hyde"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_ortenblad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/questionTwo_Ortenblad"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_powers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/questionTwo_Powers"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/questionTwo_White"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/lbl_questionThree"
            style="@style/headerTextStyle"
            android:text="@string/lbl_questionThree" />

        <EditText
            android:id="@+id/edit_questionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="8dp"
            android:hint="@string/edit_yourAnswer" />

        <TextView
            style="@style/headerTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/lbl_questionFour" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/questionFour_No"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/questionFour_Yes"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            style="@style/headerTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/lbl_questionFive" />

        <CheckBox
            android:id="@+id/check_namur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/questionFive_Namen"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check_koppenberg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/questionFive_Koppenberg"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check_essen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/questionFive_Essen"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check_vegas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/questionFive_Vegas"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitQuiz"
            android:text="@string/btn_submit" />

    </LinearLayout>
</ScrollView>